--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -3,4 +3,22 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
          version="4.0">
+    <servlet>
+        <servlet-name>FindAllStudentsServlet</servlet-name>
+        <servlet-class>com.dlvtc.controller.SelectAllServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>FindAllStudentsServlet</servlet-name>
+        <url-pattern>/main/findAll</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>ManageStudentServlet</servlet-name>
+        <servlet-class>com.dlvtc.controller.ManageStudentServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>ManageStudentServlet</servlet-name>
+        <url-pattern>/main/manageStudent</url-pattern>
+    </servlet-mapping>
+
 </web-app>
