--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -30,4 +30,13 @@
         <url-pattern>/findById</url-pattern>
     </servlet-mapping>
 
+    <servlet>
+        <servlet-name>insert</servlet-name>
+        <servlet-class>com.dlvtc.controller.InsertServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>insert</servlet-name>
+        <url-pattern>/insert</url-pattern>
+    </servlet-mapping>
+
 </web-app>
