feat(manage-student): add delete and update servlets, update JSP and web.xml
- 添加了删除和更新学生信息的servlet。- 修改了manageStudent.jsp中的链接参数从'ID'到'Id'以匹配servlet的参数接收。
- 在web.xml中添加了对deleteStudent和updateStudent servlets的配置。

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -39,4 +39,22 @@
         <url-pattern>/insert</url-pattern>
     </servlet-mapping>
 
+    <servlet>
+        <servlet-name>deleteStudent</servlet-name>
+        <servlet-class>com.dlvtc.controller.DeleteStudentServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>deleteStudent</servlet-name>
+        <url-pattern>/deleteStudent</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>updateStudent</servlet-name>
+        <servlet-class>com.dlvtc.controller.UpdateStudentServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>updateStudent</servlet-name>
+        <url-pattern>/updateStudent</url-pattern>
+    </servlet-mapping>
+
 </web-app>
