feat(update-student): correct spelling errors in JSP and servlets
- Updated 'hight' to 'height' in updateStudent.jsp and UpdateStudentDoneServlet.java.
- Fixed the capitalization of 'Id' to 'id' in UpdateStudentServlet.java to match parameter names.
- Added missing servlet mapping for updateStudentDone in web.xml.

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -57,4 +57,12 @@
         <url-pattern>/updateStudent</url-pattern>
     </servlet-mapping>
 
+    <servlet>
+        <servlet-name>updateStudentDone</servlet-name>
+        <servlet-class>com.dlvtc.controller.UpdateStudentDoneServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>updateStudentDone</servlet-name>
+        <url-pattern>/updateStudentDone</url-pattern>
+    </servlet-mapping>
 </web-app>
